--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 </head>
 <body id="background">
   <main>
-    <div class="image">
-      <img src="illustration-hero.svg"  />
-    </div>
+   
+      <img src="illustration-hero.svg" id="pic" height="100%"
+      width="100%" />
+    
     <div class="description">
       <h1>Order Summary</h1>
       <p id="font">You can now listen to millions of songs,<br> audiobooks, and podcasts on any 
